--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,7 +7,6 @@
     <tr>
       <th>Partner</th>
       <th>Address</th>
-      <th>Phone</th>
       <th>Date</th>
       <th>Time</th>
       <th colspan="3"></th>
@@ -19,9 +18,11 @@
       <tr>
         <td><%= post.partner %></td>
         <td><%= post.address %></td>
-        <td><%= post.phone %></td>
         <td><%= post.date %></td>
-        <td><%= post.time %></td>
+        <td><% if post.time %> 
+              <%= post.time.hour %>시 <%= post.time.min %>분 
+            <% end %>
+        </td>
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
